# ai-job-finder

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  GOOGLE_JOBS_SETUP.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SUMMARY.md  agent.py  demo.py  docker-compose.cua.yml  example.config.yaml  example.local.config.yaml  example.py  example_google_jobs.py  job_filter.py  job_sources.py  my.config.yaml  openai_parser.py  package.json  pyproject.toml  requirements.txt  test_agent.py
examples/: task-basic.json  task-entry-level.json  task-remote.json
src/: computer-control-api.js  index.js  linkedin-job-agent.js
src/ai_job_finder/: __init__.py  automation.py  cli.py  client.py  computer_control.py  config.py  linkedin_agent.py
tests/: test_linkedin_agent.py
