[project]
name = "ai-job-finder"
version = "0.1.0"
description = "Automation agent for searching LinkedIn jobs using a computer-control API"
authors = [{name = "AI Assistant"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
develop = ["pytest>=7.4"]

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
